[package]
name = "doomfront"
version = "0.0.0"
edition = "2021"

authors = ["Jerome Martina"]
categories = ["encoding", "game-development", "parser-implementations"]
description = "Frontends for Doom DSLs"
homepage = "https://github.com/j-martina/doom-rs/"
keywords = ["doom", "dsl", "encoding", "gamedev", "parser"]
license = ""
publish = false
repository = "https://github.com/j-martina/doom-rs/"

[features]
default = []
ser_de = ["serde", "arrayvec/serde", "rowan/serde1", "smallvec/serde"]

[dependencies]
arrayvec = "0.7.2"
chumsky = "0.9.0"
rowan = "0.15.10"
serde = { version = "1.0.152", features = ["derive"], optional = true }
smallvec = {version = "1.10.0", features = ["const_generics", "const_new"] }
